--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,11 @@
     "@fontsource/roboto": "^5.1.1",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "js-cookie": "^3.0.5",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
@@ -24,6 +29,8 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@eslint/js": "^9.17.0",
+    "@types/axios": "^0.9.36",
+    "@types/node": "^22.10.3",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-router-dom": "^5.3.3",
